📦 Added new font files and icon SVG, updated font styles.
- Added Chibold.woff and Chibold.woff2 font files.
- Included font styling in style.css for Chibold.
- Added a new icon SVG file named nothing.svg.

--- a/assets/styles/base.variables.sass
+++ b/assets/styles/base.variables.sass
@@ -6,7 +6,7 @@ $xl: 1200px
 $xxl: 1400px
 
 $purple: #E3CBA6
-$body-color: #848484
 
-$brand1: #A33900
+$brand1: #D75D41
+$brand2: #F09F33
 $primary: $brand1
