--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,6 +8,7 @@
 
 $brand-colors: (
 	"brand1": $brand1,
+	"brand2": $brand2,
 	"primary": $primary,
 );
 
@@ -30,12 +31,8 @@ $spacers: (
 
 // Overwrite bootstrap sass variables
 $enable-negative-margins: true;
-$navbar-light-color: $dark;
-$font-family-sans-serif: 'Poppins', sans-serif;
-$font-family: 'Poppins', sans-serif;
-$font-size-base: .85rem;
-$input-btn-padding-x: 1rem;
-$border-radius: 2px;
+$font-family-sans-serif: 'Inter', sans-serif;
+$font-family: 'Inter', sans-serif;
 
 $container-max-widths: (
 	sm: 540px,
@@ -71,7 +68,7 @@ body {
 	position: relative;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import "bootstrap";
 
 .purple {
