manita de gato2

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -77,12 +77,12 @@ body {
 @import "bootstrap";
 
 .purple {
-	color: #C8B255;
+	color: #D75D41;
 }
 
 .btn-brand {
 
-	background-color: #E3CBA6;
+	background-color: #F09F33;
 	border-color: #89888a;
 	color: white !important;
 
