--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -11,40 +11,42 @@
 		background: $gray-100
 
 	&::-webkit-scrollbar-thumb
-
 		background: $gray-300
 
 	&::-webkit-scrollbar-thumb:hover
-
-		background: $gray-400
+		background: $primary
 
 	&::-webkit-scrollbar-thumb:active
-
 		background: $gray-500
 
 	&::-webkit-scrollbar-corner
-
 		background: $gray-100
 
 	&::-webkit-scrollbar-button
 
 		background: $gray-100
 
+	&::-webkit-scrollbar-button:vertical:start:increment, &::-webkit-scrollbar-button:vertical:end:decrement
+		display: none
+
+	::-webkit-scrollbar-button:horizontal:start:increment, &::-webkit-scrollbar-button:horizontal:end:decrement
+		display: none
+
 	&::-webkit-scrollbar-button:start:decrement
 
-		height: 0.5rem
+		height: 0
 
 	&::-webkit-scrollbar-button:end:increment
 
-		height: 0.5rem
+		height: 0
 
 	&::-webkit-scrollbar-button:horizontal:start:decrement
 
-		width: 0.5rem
+		width: 0
 
 	&::-webkit-scrollbar-button:horizontal:end:increment
 
-		width: 0.5rem
+		width: 0
 
 // Font sizes
 
