--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -79,6 +79,7 @@
 	text-transform: uppercase
 	padding: 1rem
 	box-shadow: 0 1em 0 $brand1
+	margin-bottom: 1em
 	top: 0
 	transition: all 150ms ease-in-out !important
 
