🎉 Updated fonts and navigation links 🌐
- Added new font files: CHIBOLD.woff and CHIBOLD.woff2
- Removed old font files: Chibold.woff and Chibold.woff2
- Updated font references in style.css to use the new font files
- Modified navigation links in Header.vue:
  - Replaced "Earn" with "Home"
  - Added a new link for the "Team" page
- Created a new page, team.vue, for displaying team members' information and images
- Added images for team members: burrito-thumbs-up.png, marcus.jpg, rodrigo.jpg, jesus.jpg

--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'Chibold';
-	src: url('Chibold.woff2') format('woff2'),
-	url('Chibold.woff') format('woff');
+	src: url('CHIBOLD.woff2') format('woff2'),
+	url('CHIBOLD.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 	font-display: swap;
